--- a/css/default.css
+++ b/css/default.css
@@ -2,9 +2,33 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Exo", Arial;
 }
 
 body, html{
     width: 100%;
     height: 100%;
+
+    color: lightgray;
+    background-color: black;
+    
+}
+
+.flex{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.index{
+    position: relative;
+    z-index: 2;
+}
+
+.background{
+    background-image: url("/images/estrelas.png");
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
