--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,32 @@
 .home{
+    width: 100%;
+    height: 100%;
+
     background-image: url("/images/estrelasHome.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
+
+#astronauta{
+    width: 14%;
+    height: 100%;
+    background-image: url("/images/astronauta.png");
+    /* recortar a imagem do astronauta para terminar no pé e cabeça */
+
+    position: absolute;
+    bottom: -180px;
+    left: 42%;
+    z-index: 1;
+}
+
+/* dar outro nome para quem somos */
+.quemSomos{
+    padding: 30px;
+    background-color: rgb(0, 0, 158);
+
+    font-size: 3em;
+    font-weight: bold;
+
+    position: relative;
+    z-index: 2;
+}
+
+
