--- a/css/default.css
+++ b/css/default.css
@@ -27,7 +27,7 @@ body, html{
 }
 
 .background{
-    background-image: url("./images/estrelas.png");
+    background-image: url("../images/estrelas.png");
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
