--- a/css/default.css
+++ b/css/default.css
@@ -1,15 +1,20 @@
+:root{
+    --themeColor: rgb(11, 11, 85);
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Exo", Arial;
+    /* font-family: "Exo", Arial; */
+    font-family: 'Orbitron', Arial;
 }
 
 body, html{
     width: 100%;
     height: 100%;
 
-    color: lightgray;
+    color: white;
     background-color: black;
     
 }
@@ -31,4 +36,51 @@ body, html{
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+/* dar outro nome para quem somos */
+.quemSomos{
+    padding: 30px;
+    background-color: var(--themeColor);
+
+    font-size: 3em;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    position: relative;
+    z-index: 2;
+}
+
+.defaultSection{
+    width: 100%;
+    padding: 35px;
+}
+
+/* HOME BUTTON */
+#homeButton{
+    --diameter: 40px;
+    --buttonSpace: 40px;
+
+    width: var(--diameter);
+    height: var(--diameter);
+
+    background-color: aliceblue;
+
+    position: fixed;
+    bottom: var(--buttonSpace);
+    right: var(--buttonSpace);
+    z-index: 5;
+
+    box-shadow:
+        0 0 30px 1px white,
+        0 0 35px 1px rgb(146, 162, 235),
+        0 0 40px 1px rgb(75, 255, 255);
+
+    border-radius: 50%;
+
+    cursor: pointer;
+}
+
+#homeButton > ion-icon{
+    color: black;
 }
