--- a/css/home.css
+++ b/css/home.css
@@ -2,31 +2,54 @@
     width: 100%;
     height: 100%;
 
-    background-image: url("../images/estrelasHome.png");
+    background-image: url("../images/estrelas.png");
 }
 
 #astronauta{
-    width: 14%;
-    height: 100%;
+
+    /* width: 12%; */
+    /* height: 50%; */
+    width: 180px;
+    height: 350px;
     background-image: url("../images/astronauta.png");
-    /* recortar a imagem do astronauta para terminar no pé e cabeça */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
 
     position: absolute;
-    bottom: -180px;
-    left: 42%;
+    bottom: 0;
     z-index: 1;
 }
 
-/* dar outro nome para quem somos */
-.quemSomos{
-    padding: 30px;
-    background-color: rgb(0, 0, 158);
+#orion{
 
-    font-size: 3em;
-    font-weight: bold;
+    padding: 5px;
 
-    position: relative;
-    z-index: 2;
+    flex-flow: row;
+    gap: 5px;
+    
+    position: absolute;
+    top: 30%;
 }
 
+#orion > #orionTitle{
+    font-size: 60px;
+    letter-spacing: 5px;
+}
 
+#sun{
+    --sunDiameter: 400px;
+    width: var(--sunDiameter);
+    height: var(--sunDiameter);
+
+    border-radius: 50%;
+    background-color: white;
+
+    box-shadow:
+        0 0 60px 30px white,
+        0 0 100px 60px rgb(146, 162, 235),
+        0 0 140px 70px rgb(75, 255, 255);
+
+    position: absolute;
+    bottom: calc( (var(--sunDiameter) / -2 ) );
+}
