--- a/css/default.css
+++ b/css/default.css
@@ -33,12 +33,12 @@ body, html{
 
 .background{
     background-image: url("../images/estrelas.png");
-    background-size: 100% 100%;
+    /* background-size: 100% 100%; */
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-/* dar outro nome para quem somos */
 .divisor{
     padding: 30px;
     background-color: var(--themeColor);
