--- a/css/clientes.css
+++ b/css/clientes.css
@@ -9,6 +9,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    cursor: pointer;
 }
 
 #lindimais{
