--- a/css/default.css
+++ b/css/default.css
@@ -91,26 +91,32 @@ body, html{
 
 /* SCROLL BAR */
 
-/* body::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 8px;
-  }
+    /* display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center; */
+}
   
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background: rgb(0, 0, 46);
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: white;
     border-radius: 20px;
 }
 
-body::-webkit-scrollbar-thumb::before {
+::-webkit-scrollbar-thumb::after {
     content: "";
-    position: absolute;
-    left: 0;
+    display: block;
+    position: relative;
     top: 0;
-    background-color: orangered;
+    left: 0;
+    z-index: 5;
+
     border-radius: 50%;
-    width: 8px;
-    
-} */
+    background: orangered;
+    width: 2px;
+}
