--- a/css/virtualizacao.css
+++ b/css/virtualizacao.css
@@ -1,11 +1,15 @@
 .virtualizacaoIMG{
     width: 100%;
-    height: 200px;
-    gap: 50px;
-
+    gap: 40px;
+    margin-bottom: 40px;
 }
 
 .virtualizacaoIMG > img{
+    width: 150px;
+    height: 150px;
+}
+
+.virtualizacaoIMG > div{
     width: 150px;
     height: 150px;
 }
