--- a/css/contato.css
+++ b/css/contato.css
@@ -30,6 +30,12 @@
     gap: 30px;
 }
 
+.socialsLogos > a{
+    text-decoration:none;
+    /* color: white; */
+}
+
+
 .sLogo{
     width: 40px;
     height: 40px;
