--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -50,6 +50,7 @@
     /* QUEM SOMOS */
     .card{
         width: 450px;
+        height: auto;
         text-align: center;
         cursor: pointer;
     }
@@ -74,9 +75,11 @@
         right: -10px;
     }
 
-
-
     .card > p{
+        display: none;
+    }
+
+    .card > ul{
         display: none;
     }
 
@@ -84,10 +87,37 @@
     
     #gestaoText {
         text-align: center;
+        /* height: auto; */
     }
 
-    #gestaoText > .text > h3{
+    #gestaoText .text{
+        height: auto;
+    }
+
+    #gestaoText > .text > div{
         width: 100%;
+        cursor: pointer;
+    }
+
+    #gestaoText > .text > div:hover{
+        color: blue;
+    }
+
+    #gestaoText > .text > div::after {
+        content: "";
+        --size: 10px;
+        border-left: var(--size) solid transparent;
+        border-right: var(--size) solid transparent;
+        border-top: var(--size) solid #a4c2f4;
+        position: relative;
+        bottom: 10px;
+        right: 0;
+
+        /* FAZER ANIMAÇÂO */
+    }      
+
+    #gestaoText > .text > ul{
+        display: none;
     }
 
     #gestaoText > .text > ul > li{
