--- a/css/quemSomos.css
+++ b/css/quemSomos.css
@@ -5,8 +5,10 @@
 
 .card{
     width: 350px;
+    height: 400px;
     padding: 30px 0;
     
+    align-items: flex-start;
     background: linear-gradient( 290deg, rgba(0, 0, 0, .6),  rgba(100, 100, 100, .6) );
 
     border: 1px solid white;
@@ -17,13 +19,23 @@
     width: 85%;
     padding-bottom: 20px;
     
+    font-family: 'Audiowide', 'Arial';
     font-weight: bold;
     text-align: center;
+    letter-spacing: 2px;
+
     border-bottom: 1px solid;
     border-image: linear-gradient(to right, white,blue) 1;
 }
 
 .card > p{
+    height: 100%;
+    padding: 30px;
+    letter-spacing: 2px;
+    line-height: 30px;
+}
+
+.card > ul{
     height: 100%;
     padding: 30px;
     letter-spacing: 2px;
