--- a/css/default.css
+++ b/css/default.css
@@ -20,7 +20,6 @@ body, html{
 
     color: white;
     background-color: black;
-    
 }
 
 .flex{
@@ -37,11 +36,10 @@ body, html{
 
 .background{
     /* background-image: url("../images/estrelas.png"); */
-    /* background-size: 100% 100%; */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background: rgba(0, 0, 0, .6)
+    background: rgba(0, 0, 0, .6);
 }
 
 .divisor{
@@ -129,3 +127,22 @@ body, html{
 
     border-radius: 50%;
 }
+
+.milkway{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgb(7, 6, 20);
+    background: linear-gradient(
+      5deg,
+      rgb(0, 0, 0) 5%,
+      rgb(5, 12, 41) 35%,
+      rgb(21, 26, 63) 50%,
+      rgb(5, 12, 41)  65%,
+      rgb(0, 0, 0) 95%
+    );
+    overflow: hidden;
+    z-index: 0;
+  }
