--- a/css/home.css
+++ b/css/home.css
@@ -29,10 +29,19 @@
 }
 
 #orion{
+    --orionDim: 320px;
+    width: var(--orionDim);
+    height: calc( var(--orionDim) / 4);
     padding: 5px;
 
     flex-flow: row;
     gap: 5px;
+
+    background-image: url('../images/orion.png');
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+
     
     position: absolute;
     top: 30%;           
