O MELHOR HEADER Q VOCE JA VIU NA VIDA

--- a/css/default.css
+++ b/css/default.css
@@ -10,6 +10,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
     font-family: "Exo", Arial;
 }
 
@@ -19,6 +21,7 @@ body, html{
 
     color: white;
     background-color: black;
+
 }
 
 .flex{
