Ajustado #rocket no header, texto no footer e tamanho do texto em #cardShowContent

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,9 @@
+#footer{
+    justify-content: flex-start;
+}
 
 #footer > p{
-    font-size: 12px;
-    text-align: center;
-    width: 70%;
+    font-size: smaller;
+
+    width: 100%;
 }
