--- a/css/default.css
+++ b/css/default.css
@@ -24,6 +24,12 @@ body, html{
 
 }
 
+a{
+    text-decoration: none;
+    color: inherit;
+    font: inherit;
+}
+
 .flex{
     display: flex;
     flex-flow: row wrap;
