--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -179,6 +179,11 @@
         text-align: center;
     }
 
+    .telefone{
+        align-items: center;
+    }
+    
+
     /* FOOTER */
  
     #footer > p{
@@ -189,6 +194,15 @@
     
 }
 
+@media only screen and (max-width: 800px) {
+    /* CONTATOS */
+    .contatos{
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
+}
 
 
 @media only screen and (max-width: 700px) {
